--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
   background-color: rgb(232, 235, 199);
   font-family: fantasy;
   font-size: 24px;
+  width:auto;
 }
 
 input {
@@ -84,3 +85,15 @@ img:hover {
 li {
   list-style: none;
 }
+@media screen and (max-width: 960px) {
+    .text-title,
+    .inputValue,
+    .quantity
+    .result,
+    .change-text,
+    .buttons{
+      float: none;
+      width: auto;
+    }
+  }
+
