--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   background-color: rgb(232, 235, 199);
   font-family: fantasy;
   font-size: 24px;
-  width:auto;
+  width: auto;
 }
 
 input {
@@ -86,14 +86,12 @@ li {
   list-style: none;
 }
 @media screen and (max-width: 960px) {
-    .text-title,
-    .inputValue,
-    .quantity
-    .result,
-    .change-text,
-    .buttons{
-      float: none;
-      width: auto;
-    }
+  .text-title,
+  .inputValue,
+  .quantity .result,
+  .change-text,
+  .buttons {
+    float: none;
+    width: auto;
   }
-
+}
